Switched back to Java 8 (for LTS reasons of that Java version)